--- a/layout/default/layout.css
+++ b/layout/default/layout.css
@@ -2279,6 +2279,9 @@ div:not(.handcards)>.card>.info>span,
 #window>.damage.fullscreenavatar[data-nature='water']>div:first-child>div{
 	box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 1px, rgba(0, 0, 0,0.5) 0 0 10px, rgba(0, 0, 0,0.3) 0 0 30px, rgba(78, 117, 140,1) 0 0 60px, rgba(78, 117, 140,1) 0 0 60px;
 }
+#window>.damage.fullscreenavatar[data-nature='ice']>div:first-child>div{
+	box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 1px, rgba(0, 0, 0,0.5) 0 0 20px, rgba(0, 0, 0,0.3) 0 0 40px, rgba(213, 194, 179, 1) 0 0 80px;
+}
 #window>.damage.fullscreenavatar[data-nature='soil']>div:first-child>div{
 	box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 1px, rgba(0, 0, 0,0.5) 0 0 10px, rgba(0, 0, 0,0.3) 0 0 30px, rgba(128, 59, 2,1) 0 0 60px;
 }
@@ -2765,7 +2768,8 @@ div:not(.handcards)>.card>.info>span,
 .player>.name_seat {
 	opacity: 0;
 }
-.player:not([data-position='0']).unseen.unseen2>.name_seat {
+.player:not([data-position='0']).unseen.unseen2>.name_seat,
+.player:not([data-position='0']):not(.fullskin2).unseen>.name_seat {
 	opacity: 1 !important;
 }
 
@@ -3472,6 +3476,9 @@ div:not(.handcards)>.card>.info>span,
 .kami {
 	color: rgba(90,118,99,0.3);
 }
+.ice {
+	color: rgba(80,160,255,0.3);
+}
 .poison {
 	color: rgba(30, 133, 51,0.4);
 }
@@ -3803,6 +3810,7 @@ span[data-nature='keymm'] {
 .player .identity[data-color="ye"],
 .player .identity[data-color="rYe"],
 .player .identity[data-color="bYe"],
+.player .identity[data-color="jin"],
 div[data-nature='thunder'],
 span[data-nature='thunder'] {
 	text-shadow: rgba(100, 74, 139,1) 0 0 2px,rgba(100, 74, 139,1) 0 0 5px,rgba(100, 74, 139,1) 0 0 10px,
@@ -3922,6 +3930,27 @@ span[data-nature='graymm'] {
 }
 div[data-nature='graymx'],
 span[data-nature='graymx'] {
+	text-shadow: black 0 0 1px,rgba(213, 194, 179,0.2) 0 0 2px,rgba(213, 194, 179,1) 0 0 2px,rgba(213, 194, 179,1) 0 0 5px,
+		rgba(213, 194, 179,1) 0 0 5px,black 0 0 1px;
+}
+
+div[data-nature='ice'],
+span[data-nature='ice'] {
+	text-shadow: rgba(213, 194, 179,1) 0 0 2px,rgba(213, 194, 179,1) 0 0 5px,rgba(213, 194, 179,1) 0 0 10px,
+		rgba(213, 194, 179,1) 0 0 10px,rgba(213, 194, 179,1) 0 0 20px,rgba(213, 194, 179,1) 0 0 20px,black 0 0 1px;
+}
+div[data-nature='icem'],
+span[data-nature='icem'] {
+	text-shadow: rgba(213, 194, 179,1) 0 0 2px,rgba(213, 194, 179,1) 0 0 5px,rgba(213, 194, 179,1) 0 0 5px,
+		rgba(213, 194, 179,1) 0 0 5px,black 0 0 1px;
+}
+div[data-nature='icemm'],
+span[data-nature='icemm'] {
+	text-shadow: rgba(213, 194, 179,1) 0 0 2px,rgba(213, 194, 179,1) 0 0 2px,rgba(213, 194, 179,1) 0 0 2px,
+		rgba(213, 194, 179,1) 0 0 2px,black 0 0 1px;
+}
+div[data-nature='icemx'],
+span[data-nature='icemx'] {
 	text-shadow: black 0 0 1px,rgba(213, 194, 179,0.2) 0 0 2px,rgba(213, 194, 179,1) 0 0 2px,rgba(213, 194, 179,1) 0 0 5px,
 		rgba(213, 194, 179,1) 0 0 5px,black 0 0 1px;
 }
@@ -4094,6 +4123,10 @@ div[data-decoration="bronze"]::after{
 .card.fullskin.kami>.name {
 	color: #1F3C38;
 	border: 1px solid #1F3C38;
+}
+.card.fullskin.ice>.name {
+	color: #152E63;
+	border: 1px solid #152E63;
 }
 .card.fullskin.fire>.name {
 	color: #631515;
@@ -4268,6 +4301,7 @@ div[data-decoration="bronze"]::after{
 	color: rgb(104,221,127);
 }
 .thundertext,
+.icetext,
 .controlthundertext {
 	color: rgb(117,186,255);
 }
